bad/return_void_in_func_returning_int.example_compiler_output
ERROR
[1mbad/return_void_in_func_returning_int.lat:3:21: [1;31merror: [0;1mreturned value of type `void` is not convertible to return type `int`[m
int test() { return foo(); }
                    [1;32m^[m
